--- a/directions/index.html
+++ b/directions/index.html
@@ -14,13 +14,13 @@
 
 <body>
 
-    <div class="banner">
+   <div class="banner">
         <img src="assets/picture-frontpage.jpg" alt="AGENT-Forum" style="width:100%">
         <div class="top-left">
-            <span class="title1">AGENT</span><span class="title2">Forum</span> <span class="year">2021</span>
+            <span class="title1">AGENT</span><span class="title2">Forum</span> <span class="year">2024</span>
         </div>
         <div class="bottom-right">
-            October 27th &ndash; 29th, 2021 <br> Aalto University
+            May 14th &ndash; 17th, 2024 <br> University of Jyväskylä
         </div>
     </div>
 
@@ -42,6 +42,10 @@
         </tr>
     </table>
 
+	<p>
+	Coming soon!
+	</p>
+<!--
 	<h2>Travel and Logding</h2>
 	
 	<p>
@@ -137,7 +141,7 @@ require this, some restaurants, cafes and other services may require this. Furth
 	
 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.6504781517824!2d24.81932084226614!3d60.18651736442568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x468df5eb3ac32c41%3A0x22b2375b367ca312!2sTUAS%20building!5e0!3m2!1sen!2sfi!4v1615457408320!5m2!1sen!2sfi" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    <!--- <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten"> --->
+
 
 <p>
 A map for the Conference dinner is provided here. To get there from the Conference venue, you should take the subway towards "Vuosaari/Mellunm&auml;ki" and get off at
@@ -147,6 +151,7 @@ ask for Graniittilinna, then you should be directed to the right place.
 </p>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4719.13693711194!2d24.945634188002458!3d60.17820526736974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920bd4a0ff662b%3A0x23c3357acee44476!2sGraniittilinna!5e0!3m2!1sen!2sfi!4v1634627594999!5m2!1sen!2sfi" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+-->
     <table class="footer">
         <tr>
             <td class="footer">Design by <a target="_blank" href="http://math.ucr.edu/~mpierce/">Mike Pierce</a></td> 
