--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <h2>Overview</h2>
     <p>
-	   The 2024 AGENT&ndash;Forum (short for: Analyysin ja Geometrian Nuorten Tutkijoiden Foorumi) will be held on Tuesday May 14th &ndash; Friday May 17th 2024.
+	   The 2024 AGENT Forum (short for: Analyysin ja Geometrian Nuorten Tutkijoiden Foorumi) will be held on Tuesday May 14th &ndash; Friday May 17th 2024.
 	   It will give young researches in Analysis and Geometry in Finland an opportunity to connect through networking, 
 	   discussion and a bit of fun. More information coming soon!
 	</p>
