--- a/program/index.html
+++ b/program/index.html
@@ -14,13 +14,13 @@
 
 <body>
 
-    <div class="banner">
+      <div class="banner">
         <img src="assets/picture-frontpage.jpg" alt="AGENT-Forum" style="width:100%">
         <div class="top-left">
-            <span class="title1">AGENT</span><span class="title2">Forum</span> <span class="year">2021</span>
+            <span class="title1">AGENT</span><span class="title2">Forum</span> <span class="year">2024</span>
         </div>
         <div class="bottom-right">
-            October 27th &ndash; 29th, 2021 <br> Aalto University
+            May 14th &ndash; 17th, 2024 <br> University of Jyväskylä
         </div>
     </div>
 
@@ -43,6 +43,8 @@
     </table>
 
     <h2>Forum Program</h2>
+    Coming soon!
+    <!-- 
 	<p>
 	Below is a schedule of the conference. The abstracts are available as a pdf here: <a href="assets/titles-abstracts.pdf">Titles/Abstracts.</a> 
 	</p>
@@ -335,6 +337,7 @@ and beyond!</i></td>
     </table>
 
 -->
+
 
     <table class="footer">
         <tr>
