--- a/registration/index.html
+++ b/registration/index.html
@@ -17,10 +17,10 @@
     <div class="banner">
         <img src="assets/picture-frontpage.jpg" alt="AGENT-Forum" style="width:100%">
         <div class="top-left">
-            <span class="title1">AGENT</span><span class="title2">Forum</span> <span class="year">2021</span>
+            <span class="title1">AGENT</span><span class="title2">Forum</span> <span class="year">2024</span>
         </div>
         <div class="bottom-right">
-            October 27th &ndash; 29th, 2021 <br> Aalto University
+            May 14th &ndash; 17th, 2024 <br> University of Jyväskylä
         </div>
     </div>
 
@@ -45,8 +45,7 @@
 	  <h2>Registration</h2>
 
     <p>
-       Registration has now been closed. Everyone is free to attend the talks of the conference without a registration - either live or via streaming. The conference dinner is restricted to those attendees
-	   that were registered and wished to attend the dinner.
+       Coming soon!
     </p>
 	
     <!--
