--- a/index.html
+++ b/index.html
@@ -43,11 +43,16 @@
 
     <h2>Overview</h2>
     <p>
-	   The 2024 AGENT Forum (short for: Analyysin ja Geometrian Nuorten Tutkijoiden Foorumi) will be held on Tuesday May 14th &ndash; Friday May 17th 2024.
-	   It will give young researches in Analysis and Geometry in Finland an opportunity to connect through networking, 
-	   discussion and a bit of fun. More information coming soon!
+	   The workshop AGENT Forum 2024 will be held on Tuesday May 14th &ndash; Friday May 17th 2024 at the University of Jyväskylä.
 	</p>
 	
+	<p>
+	The abbreviation AGENT stands for Analysis, Geometry, and Number Theory. The areas should be interpreted broadly. The workshop is mainly aimed at young researchers (PhD students, postdocs) working in Finland on these areas of mathematics. Our main aim is to enable networking across universities, and across different fields of research. 
+	</p>
+	
+	<p>
+	The first edition of the conference took place in 2021 at Aalto University (<a href="http://math.aalto.fi/conferences/agent2021/">http://math.aalto.fi/conferences/agent2021/</a>). 
+	</p>
 
 
     <h2>Organizers</h2>
