--- a/directions/index.html
+++ b/directions/index.html
@@ -20,7 +20,7 @@
             <span class="title1">AGENT</span><span class="title2">Forum</span> <span class="year">2024</span>
         </div>
         <div class="bottom-right">
-            May 14th &ndash; 17th, 2024 <br> University of Jyväskylä
+            14 &ndash; 17 May 2024 <br> University of Jyväskylä
         </div>
     </div>
 
@@ -41,9 +41,47 @@
             </td>
         </tr>
     </table>
+    
+    <h2>Venue</h2>
+    The event will take place at the Department of Mathematics and Statistics of the University of Jyväskylä, which is located in the MaA and MaD buildings of the Mattilanniemi campus. The website <a href="https://navi.jyu.fi/">navi.jyu.fi</a> can be used to navigate around the buildings. <br> 
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1858.862149143023!2d25.731609879197265!3d62.23142190595252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4685755ccbd696bb%3A0xa2610b9c8588e68c!2sDepartment%20of%20Mathematics%20and%20Statistics!5e0!3m2!1spl!2sfi!4v1704723445811!5m2!1spl!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+	<h2>Accommodation</h2>
 	<p>
-	Coming soon!
+	A limited number of rooms at discounted rates is available to the participants at <a href="https://www.hotellialba.fi/">Hotelli Alba</a>, <a href="https://www.greenstar.fi/en/hotels/jyvaskyla/">Greenstar Hotel Jyväskylä</a> and <a href="https://www.scandichotels.fi/hotellit/suomi/jyvaskyla/scandic-jyvaskyla-city">Scandic Jyväskylä City</a>.
+	<ul>
+	<li>In <a href="https://www.hotellialba.fi/">Hotelli Alba</a> there are single economy rooms for 95€ per night, single standard rooms for 100€ per night, and double/twin standard rooms for 122€ per night. <br>
+	All rooms include breakfast, free parking and free sauna. These prices are available from the website <a href="https://www.hotellialba.fi/">www.hotellialba.fi</a> or through email or phone call using the code <b>AGENT24</b>. These prices are valid until <b>01.04.2024</b>. </li>
+	<li> The rooms at <a href="https://www.greenstar.fi/en/hotels/jyvaskyla/">Greenstar Hotel</a> can fit 1-3 people, and they cost 75€ per room per night. Breakfast costs 10€ per person per night extra. <br> The reservations must be done over email or phone using the code <b>AGENT24</b>. The code won’t work on the website. Their email is <a href="mailto:jyvaskyla@greenstar.fi">jyvaskyla@greenstar.fi</a> and their phone number is +358104239391. These prices are valid until <b>24.04.2024</b>.</li>
+	<li> In <a href="https://www.scandichotels.fi/hotellit/suomi/jyvaskyla/scandic-jyvaskyla-city">Scandic Jyväskylä City</a> there are single rooms for 139€ per night, and 
+double/twin rooms for 159€ per night. <br>
+These prices are available from the website <a href="www.scandichotels.fi/?bookingcode=BAGE1405524">www.scandichotels.fi/?bookingcode=BAGE1405524</a> or through email or phone call using the code <b>BAGE140524.</b> These prices are valid until <b>30.04.2024</b>. </li>
+	</ul>
+	</p>
+	
+	<p>
+	Other reasonable options include <a href="https://www.timehostel.fi/">Time Hostel & Apartments</a> and <a href="https://www.omenahotels.com/fi/hotellit/jyvaskyla/">Omena Hotel Jyväskylä</a>.
+	</p>
+	
+	<h2>Conference dinner</h2>	
+	<p>
+	The conference dinner will take place on <b>Wednesday 15th May</b> at <a href="https://www.nikolainkulma.fi/">Nikolainkulma.</a> 
+	The dinner starts at 18:30.
+	</p>
+	
+<!--	<p>
+	In <a href="https://www.hotellialba.fi/">Hotelli Alba</a> there are single economy rooms for 95€ per night, single/double standard rooms for 100€/122€ per night, and single/twin standard rooms for 100€/122€ per night. <br>
+	All rooms include breakfast, free parking and free sauna. These prices are available from the website <a href="https://www.hotellialba.fi/">www.hotellialba.fi</a> or through email or phone call using the code <b>AGENT24</b>. These prices are valid until <b>01.04.2024</b>.
+	</p>	
+	<p>
+	The rooms at <a href="https://www.greenstar.fi/en/hotels/jyvaskyla/">Greenstar Hotel</a> can fit 1-3 people, and they cost 75€ per room per night. Breakfast costs 10€ per person per night extra. <br> The reservations must be done over email or phone using the code <b>AGENT24</b>. The code won’t work on the website. Their email is <a href="mailto:jyvaskyla@greenstar.fi">jyvaskyla@greenstar.fi</a> and phone number +358104239391. These prices are valid until <b>24.04.2024</b>.
+	</p>
+
+	
+	<p>
+	In <a href="https://www.scandichotels.fi/hotellit/suomi/jyvaskyla/scandic-jyvaskyla-city">Scandic Jyväskylä City</a> there are single rooms for 139€ per night, and 
+double/twin rooms for 159€ per night. <br>
+These prices are available from the website <a href="www.scandichotels.fi/?bookingcode=BAGE1405524">www.scandichotels.fi/?bookingcode=BAGE1405524</a> or through email or phone call using the code <b>BAGE140524.</b> These prices are valid until <b>30.04.2024</b>.
 	</p>
 <!--
 	<h2>Travel and Logding</h2>
