--- a/program/index.html
+++ b/program/index.html
@@ -20,7 +20,7 @@
             <span class="title1">AGENT</span><span class="title2">Forum</span> <span class="year">2024</span>
         </div>
         <div class="bottom-right">
-            May 14th &ndash; 17th, 2024 <br> University of Jyväskylä
+            14 &ndash; 17 May 2024 <br> University of Jyväskylä
         </div>
     </div>
 
@@ -43,7 +43,15 @@
     </table>
 
     <h2>Forum Program</h2>
-    Coming soon!
+    <p>
+    The program will consist of two plenary talks, a panel, and about 30 contributed talks. We strongly encourage early stage researchers to submit their talk proposals.
+    </p>
+    
+    <h2>Contributed talks</h2>
+    <p>
+    To submit a talk proposal, send a title and abstract to <a href="mailto:agent24@jyu.fi">agent24@jyu.fi</a> by <b>28th February.</b> <br>
+    The talks will be 20 minutes long, and ideally they should be accessible to a broad spectrum of mathematicians in Analysis, Geometry and Number Theory.
+    </p>
     <!-- 
 	<p>
 	Below is a schedule of the conference. The abstracts are available as a pdf here: <a href="assets/titles-abstracts.pdf">Titles/Abstracts.</a> 
