--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class="title1">AGENT</span><span class="title2">Forum</span> <span class="year">2024</span>
         </div>
         <div class="bottom-right">
-            May 14th &ndash; 17th, 2024 <br> University of Jyväskylä
+            14 &ndash; 17 May 2024 <br> University of Jyväskylä
         </div>
     </div>
 
@@ -43,7 +43,7 @@
 
     <h2>Overview</h2>
     <p>
-	   The workshop AGENT Forum 2024 will be held on Tuesday May 14th &ndash; Friday May 17th 2024 at the University of Jyväskylä.
+	   The workshop AGENT Forum 2024 will be held on Tuesday 14th May &ndash; Friday 17th May 2024 at the University of Jyväskylä.
 	</p>
 	
 	<p>
@@ -54,6 +54,11 @@
 	The first edition of the conference took place in 2021 at Aalto University (<a href="http://math.aalto.fi/conferences/agent2021/">http://math.aalto.fi/conferences/agent2021/</a>). 
 	</p>
 
+
+	<h2>Contact</h2>
+    <p>
+	   If you have any questions, you can contact the organizers via <a href="mailto:agent24@jyu.fi">agent24@jyu.fi</a>.
+	</p>
 
     <h2>Organizers</h2>
     <p>
