--- a/registration/index.html
+++ b/registration/index.html
@@ -20,7 +20,7 @@
             <span class="title1">AGENT</span><span class="title2">Forum</span> <span class="year">2024</span>
         </div>
         <div class="bottom-right">
-            May 14th &ndash; 17th, 2024 <br> University of Jyväskylä
+            14 &ndash; 17 May 2024 <br> University of Jyväskylä
         </div>
     </div>
 
@@ -41,11 +41,33 @@
             </td>
         </tr>
     </table>
-
-	  <h2>Registration</h2>
+    
+    <h2>
+    Registration form
+    </h2>
+	<p>
+	A link to the registration form will be added here soon!<br>
+	</p>
+	
+	<h2> Deadlines </h2>
+	<p>
+	If you wish to give a talk, then the deadline for title + abstract submissions is <b>28th February</b>, unless you are applying for a fee waiver (see information below). The talk proposals should be sent to <a href="mailto:agent24@jyu.fi">agent24@jyu.fi</a>.<br>
+	The deadline for registration is <b>5th May.</b>
+	</p>	
+	<h2>Registration fee</h2>
 
     <p>
-       Coming soon!
+       The conference registration fee is <b>50€.</b>  In exceptional situations the fee may be waived, see information below. <br>
+ 	If you wish to participate in the conference dinner, the dinner fee is <b>40€.</b> <br>
+ 	The payment is made via the registration form.
+    </p>
+    
+    <h2>
+    Fee waiver
+    </h2>
+    <p>
+    The conference registration fee may be waived for participants who are selected to give a talk and who have no other available funding. If you wish to ask for a waiver, please send us a title + abstract for your talk proposal at <a href="mailto:agent24@jyu.fi">agent24@jyu.fi</a> by 28th February, and mention in your email that you ask for a waiver. In this case: DO NOT YET REGISTER. We will select the talks before the end of March. If your talk is selected, we will send you a notification, and you can eventually register (in early April) without paying the conference fee. Unfortunately, the dinner fee cannot be waived.<br>
+Note that this should be an exceptional situation: if you can cover the registration from a grant, please register normally at this point.
     </p>
 	
     <!--
