--- a/program/index.html
+++ b/program/index.html
@@ -42,15 +42,15 @@
         </tr>
     </table>
 
-    <h2>Forum Program</h2>
+    <h2>Program</h2>
     <p>
-    The program will consist of two plenary talks, a panel, and about 30 contributed talks. We strongly encourage early stage researchers to submit their talk proposals.
+    The program will consist of two colloquium talks by invited speakers, a panel, and about 30 contributed talks. We strongly encourage early stage researchers to submit their talk proposals.
     </p>
     
     <h2>Contributed talks</h2>
     <p>
     To submit a talk proposal, send a title and abstract to <a href="mailto:agent24@jyu.fi">agent24@jyu.fi</a> by <b>28th February.</b> <br>
-    The talks will be 20 minutes long, and ideally they should be accessible to a broad spectrum of mathematicians in Analysis, Geometry and Number Theory.
+    The talks will be 20 minutes long, and you should aim for at least the first half of your talk to be accessible to a broad spectrum of mathematicians in Analysis, Geometry and Number Theory.
     </p>
     <!-- 
 	<p>
