--- a/registration/index.html
+++ b/registration/index.html
@@ -51,7 +51,7 @@
 	
 	<h2> Deadlines </h2>
 	<p>
-	If you wish to give a talk, then the deadline for title + abstract submissions is <b>28th February</b>, unless you are applying for a fee waiver (see information below). The talk proposals should be sent to <a href="mailto:agent24@jyu.fi">agent24@jyu.fi</a>.<br>
+	If you wish to give a talk, then the deadline for title and abstract submissions is <b>28th February</b>. The talk proposals should be sent to <a href="mailto:agent24@jyu.fi">agent24@jyu.fi</a>.<br>
 	The deadline for registration is <b>5th May.</b>
 	</p>	
 	<h2>Registration fee</h2>
@@ -66,9 +66,12 @@
     Fee waiver
     </h2>
     <p>
-    The conference registration fee may be waived for participants who are selected to give a talk and who have no other available funding. If you wish to ask for a waiver, please send us a title + abstract for your talk proposal at <a href="mailto:agent24@jyu.fi">agent24@jyu.fi</a> by 28th February, and mention in your email that you ask for a waiver. In this case: DO NOT YET REGISTER. We will select the talks before the end of March. If your talk is selected, we will send you a notification, and you can eventually register (in early April) without paying the conference fee. Unfortunately, the dinner fee cannot be waived.<br>
+    The conference registration fee may be waived for participants who are selected to give a talk and who have no other available funding. <br>
+    If you wish to ask for a waiver, please send us the title and abstract of your proposed talk at <a href="mailto:agent24@jyu.fi">agent24@jyu.fi</a> by <b>28th February</b>, and mention in your email that you ask for a waiver. In this case: DO NOT YET REGISTER.<br>
+
+    We will select the talks before the end of March. If your talk is selected, we will send you a notification, and you can eventually register (in early April) without paying the conference fee. Unfortunately, the dinner fee cannot be waived.<br>
 Note that this should be an exceptional situation: if you can cover the registration from a grant, please register normally at this point.
-    </p>
+</p>
 	
     <!--
     <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
