--- a/directions/index.html
+++ b/directions/index.html
@@ -50,23 +50,23 @@
 	<p>
 	A limited number of rooms at discounted rates is available to the participants at <a href="https://www.hotellialba.fi/">Hotelli Alba</a>, <a href="https://www.greenstar.fi/en/hotels/jyvaskyla/">Greenstar Hotel Jyväskylä</a> and <a href="https://www.scandichotels.fi/hotellit/suomi/jyvaskyla/scandic-jyvaskyla-city">Scandic Jyväskylä City</a>.
 	<ul>
-	<li>In <a href="https://www.hotellialba.fi/">Hotelli Alba</a> there are single economy rooms for 95€ per night, single standard rooms for 100€ per night, and double/twin standard rooms for 122€ per night. <br>
-	All rooms include breakfast, free parking and free sauna. These prices are available from the website <a href="https://www.hotellialba.fi/">www.hotellialba.fi</a> or through email or phone call using the code <b>AGENT24</b>. These prices are valid until <b>01.04.2024</b>. </li>
-	<li> The rooms at <a href="https://www.greenstar.fi/en/hotels/jyvaskyla/">Greenstar Hotel</a> can fit 1-3 people, and they cost 75€ per room per night. Breakfast costs 10€ per person per night extra. <br> The reservations must be done over email or phone using the code <b>AGENT24</b>. The code won’t work on the website. Their email is <a href="mailto:jyvaskyla@greenstar.fi">jyvaskyla@greenstar.fi</a> and their phone number is +358104239391. These prices are valid until <b>24.04.2024</b>.</li>
+	<li>In <a href="https://www.hotellialba.fi/">Hotelli Alba</a> there are single economy rooms for 95€ per night, single standard rooms for 100€ per night, and double/twin standard rooms for 122€ per night. All rooms include breakfast, free parking and free sauna. <br>
+	 These prices are available from the website <a href="https://www.hotellialba.fi/">www.hotellialba.fi</a> or through email or phone call using the code <b>AGENT24</b>. These prices are valid until <b>01.04.2024</b>. </li>
+	<li> The rooms at <a href="https://www.greenstar.fi/en/hotels/jyvaskyla/">Greenstar Hotel</a> can fit 1-3 people, and they cost 75€ per room per night. Breakfast costs 10€ per person per night extra. Hotel guests can borrow bikes free of charge. <br> The reservations must be done over email or phone using the code <b>AGENT24</b>. The code won’t work on the website. Their email is <a href="mailto:jyvaskyla@greenstar.fi">jyvaskyla@greenstar.fi</a> and their phone number is +358104239391. These prices are valid until <b>24.04.2024</b>.</li>
 	<li> In <a href="https://www.scandichotels.fi/hotellit/suomi/jyvaskyla/scandic-jyvaskyla-city">Scandic Jyväskylä City</a> there are single rooms for 139€ per night, and 
-double/twin rooms for 159€ per night. <br>
+double/twin rooms for 159€ per night. The breakfast is included. <br>
 These prices are available from the website <a href="www.scandichotels.fi/?bookingcode=BAGE1405524">www.scandichotels.fi/?bookingcode=BAGE1405524</a> or through email or phone call using the code <b>BAGE140524.</b> These prices are valid until <b>30.04.2024</b>. </li>
 	</ul>
 	</p>
 	
 	<p>
-	Other reasonable options include <a href="https://www.timehostel.fi/">Time Hostel & Apartments</a> and <a href="https://www.omenahotels.com/fi/hotellit/jyvaskyla/">Omena Hotel Jyväskylä</a>.
+	Other affordable options include <a href="https://www.timehostel.fi/">Time Hostel & Apartments</a> and <a href="https://www.omenahotels.com/fi/hotellit/jyvaskyla/">Omena Hotel Jyväskylä</a>.
 	</p>
 	
 	<h2>Conference dinner</h2>	
 	<p>
 	The conference dinner will take place on <b>Wednesday 15th May</b> at <a href="https://www.nikolainkulma.fi/">Nikolainkulma.</a> 
-	The dinner starts at 18:30.
+	The dinner starts at <b>18:30</b>.
 	</p>
 	
 <!--	<p>
