--- a/registration/index.html
+++ b/registration/index.html
@@ -46,7 +46,8 @@
     Registration form
     </h2>
 	<p>
-	A link to the registration form will be added here soon!<br>
+	To register, fill in the following form: <a href=" https://registration.contio.fi/jyu/Registration/Login?id=4079-KONG_MLTK-3423"> https://registration.contio.fi/jyu/Registration/Login?id=4079-KONG_MLTK-3423</a>.<br>
+	The form includes a link to pay the registration fee.
 	</p>
 	
 	<h2> Deadlines </h2>
