--- a/registration/index.html
+++ b/registration/index.html
@@ -46,8 +46,7 @@
     Registration form
     </h2>
 	<p>
-	To register, fill in the following form: <a href=" https://registration.contio.fi/jyu/Registration/Login?id=4079-KONG_MLTK-3423"> https://registration.contio.fi/jyu/Registration/Login?id=4079-KONG_MLTK-3423</a>.<br>
-	The form includes a link to pay the registration fee.
+	To register and pay the conference fee, go to <a href=" https://registration.contio.fi/jyu/Registration/Login?id=4079-KONG_MLTK-3423"> https://registration.contio.fi/jyu/Registration/Login?id=4079-KONG_MLTK-3423</a>.
 	</p>
 	
 	<h2> Deadlines </h2>
