--- a/registration/index.html
+++ b/registration/index.html
@@ -46,7 +46,7 @@
     Registration form
     </h2>
 	<p>
-	To register and pay the conference fee, go to <a href=" https://registration.contio.fi/jyu/Registration/Login?id=4079-KONG_MLTK-3423"> https://registration.contio.fi/jyu/Registration/Login?id=4079-KONG_MLTK-3423</a>.
+	To register and pay the conference fee, go to the <a href=" https://registration.contio.fi/jyu/Registration/Login?id=4079-KONG_MLTK-3423">registration form</a>.
 	</p>
 	
 	<h2> Deadlines </h2>
