--- a/directions/index.html
+++ b/directions/index.html
@@ -15,7 +15,7 @@
 <body>
 
    <div class="banner">
-        <img src="assets/picture-frontpage.jpg" alt="AGENT-Forum" style="width:100%">
+        <img src="assets/mystic-cropped8.jpeg" alt="AGENT-Forum" style="width:100%">
         <div class="top-left">
             <span class="title1">AGENT</span><span class="title2">Forum</span> <span class="year">2024</span>
         </div>
