--- a/program/index.html
+++ b/program/index.html
@@ -44,7 +44,7 @@
 
     <h2>Program</h2>
     <p>
-    The program will consist of two colloquium talks by invited speakers, a panel, and about 30 contributed short talks. We strongly encourage early stage researchers to submit their talk proposals.
+    The program will consist of colloquium talks by <a href="https://users.utu.fi/ksmato/">Kaisa Matomäki</a> and <a href="https://www.mv.helsinki.fi/home/sahlsten/">Tuomas Sahlsten</a>, a panel, and roughly 30 contributed short talks. We strongly encourage early stage researchers to submit their talk proposals.
     </p>
     
     <h2>Contributed talks</h2>
