--- a/program/index.html
+++ b/program/index.html
@@ -44,12 +44,12 @@
 
     <h2>Program</h2>
     <p>
-    The program will consist of colloquium talks by <a href="https://users.utu.fi/ksmato/">Kaisa Matomäki</a> and <a href="https://www.mv.helsinki.fi/home/sahlsten/">Tuomas Sahlsten</a>, a panel, and roughly 30 contributed short talks. We strongly encourage early stage researchers to submit their talk proposals.
+    The program will consist of colloquium talks by <a href="https://users.utu.fi/ksmato/">Kaisa Matomäki</a> and <a href="https://homepages.uc.edu/~shanmun/"> Nages Shanmugalingam</a>, a panel, and roughly 30 contributed short talks. We strongly encourage early stage researchers to submit their talk proposals.
     </p>
     
     <h2>Contributed talks</h2>
     <p>
-    To submit a talk proposal, send a title and abstract to <a href="mailto:agent24@jyu.fi">agent24@jyu.fi</a> by <b>28th February.</b> In March the scientific committee will select 30 talks from all the proposed ones, and by early April we will let you know if your talk has been selected.<br>
+    To submit a talk proposal, send a title and abstract to <a href="mailto:agent24@jyu.fi">agent24@jyu.fi</a> by <b>28th February.</b> In March the scientific committee (comprising <a href="https://users.utu.fi/ksmato/">Kaisa Matomäki</a> and <a href="https://www.mv.helsinki.fi/home/sahlsten/">Tuomas Sahlsten</a>) will select 30 talks from all the proposed ones, and by early April we will let you know if your talk has been selected.<br>
     </p>
     <p>
         The talks will be 20 minutes long, and you should aim for at least the first half of your talk to be accessible to a broad spectrum of mathematicians in Analysis, Geometry and Number Theory.
