--- a/program/index.html
+++ b/program/index.html
@@ -54,6 +54,11 @@
     <p>
         The talks will be 20 minutes long, and you should aim for at least the first half of your talk to be accessible to a broad spectrum of mathematicians in Analysis, Geometry and Number Theory.
         </p>
+        
+    <h2>Schedule</h2>
+    <p>
+    The schedule will appear here later on. The conference will start on <b>14th May at 10:30</b>, and end on <b>17th May at 14:15</b>.
+    </p>    
     <!-- 
 	<p>
 	Below is a schedule of the conference. The abstracts are available as a pdf here: <a href="assets/titles-abstracts.pdf">Titles/Abstracts.</a> 
