--- a/program/index.html
+++ b/program/index.html
@@ -44,7 +44,7 @@
 
     <h2>Program</h2>
     <p>
-    The program will consist of colloquium talks by <a href="https://users.utu.fi/ksmato/">Kaisa Matomäki</a> and <a href="https://homepages.uc.edu/~shanmun/"> Nages Shanmugalingam</a>, a panel, and roughly 30 contributed short talks. We strongly encourage early stage researchers to submit their talk proposals.
+    The program will consist of colloquium talks by <a href="https://users.utu.fi/ksmato/">Kaisa Matomäki</a> and <a href="https://homepages.uc.edu/~shanmun/"> Nages Shanmugalingam</a>, a panel discussing academic career in mathematics (panelists: <a href="http://users.jyu.fi/~pkoskela/">Pekka Koskela</a>, <a href="http://users.jyu.fi/~salomi/">Mikko Salo</a>, <a href="https://homepages.uc.edu/~shanmun/"> Nages Shanmugalingam</a>), and roughly 30 contributed short talks. We strongly encourage early stage researchers to submit their talk proposals.
     </p>
     
     <h2>Contributed talks</h2>
