--- a/directions/index.html
+++ b/directions/index.html
@@ -48,7 +48,7 @@
 
 	<h2>Accommodation</h2>
 	<p>
-	A limited number of rooms at discounted rates is available to the participants at <a href="https://www.hotellialba.fi/">Hotelli Alba</a>, <a href="https://www.greenstar.fi/en/hotels/jyvaskyla/">Greenstar Hotel Jyväskylä</a> and <a href="https://www.scandichotels.fi/hotellit/suomi/jyvaskyla/scandic-jyvaskyla-city">Scandic Jyväskylä City</a>.
+	A limited number of rooms at discounted rates is available to the participants at <a href="https://www.hotellialba.fi/">Hotelli Alba</a>, <a href="https://www.greenstar.fi/en/hotels/jyvaskyla/">Greenstar Hotel Jyväskylä</a> and <a href="https://www.scandichotels.fi/hotellit/suomi/jyvaskyla/scandic-jyvaskyla-city">Scandic Jyväskylä City</a>. The discounted rates are valid for stays between 14th and 17th May, so if you arrive on the 13th, the first night will be at a normal price. 
 	<ul>
 	<li>In <a href="https://www.hotellialba.fi/">Hotelli Alba</a> there are single economy rooms for 95€ per night, single standard rooms for 100€ per night, and double/twin standard rooms for 122€ per night. All rooms include breakfast, free parking and free sauna. <br>
 	 These prices are available from the website <a href="https://www.hotellialba.fi/">www.hotellialba.fi</a> or through email or phone call using the code <b>AGENT24</b>. These prices are valid until <b>01.04.2024</b>. </li>
