--- a/program/index.html
+++ b/program/index.html
@@ -44,14 +44,18 @@
 
     <h2>Program</h2>
     <p>
-    The program will consist of colloquium talks by <a href="https://users.utu.fi/ksmato/">Kaisa Matomäki</a> and <a href="https://homepages.uc.edu/~shanmun/"> Nages Shanmugalingam</a>, a panel discussing academic career in mathematics (panelists: <a href="http://users.jyu.fi/~pkoskela/">Pekka Koskela</a>, <a href="http://users.jyu.fi/~salomi/">Mikko Salo</a>, <a href="https://homepages.uc.edu/~shanmun/"> Nages Shanmugalingam</a>), and roughly 30 contributed short talks. We strongly encourage early stage researchers to submit their talk proposals.
+    The program will consist of colloquium talks by <a href="https://blogs.mat.ucm.es/miguelgarcia/">Miguel García Bravo</a>, <a href="https://users.utu.fi/ksmato/">Kaisa Matomäki</a>, <a href="https://homepages.uc.edu/~shanmun/"> Nages Shanmugalingam</a>, and <a href="https://cc.oulu.fi/~mvilla21/">Michele Villa</a>, a panel discussing academic career in mathematics (panelists: <a href="http://users.jyu.fi/~pkoskela/">Pekka Koskela</a>, <a href="http://users.jyu.fi/~salomi/">Mikko Salo</a>, <a href="https://homepages.uc.edu/~shanmun/"> Nages Shanmugalingam</a>), and 25 contributed short talks.
     </p>
     
     <h2>Contributed talks</h2>
-    <p>
+    <!-- <p>
     To submit a talk proposal, send a title and abstract to <a href="mailto:agent24@jyu.fi">agent24@jyu.fi</a> by <b>10th March.</b> In March the scientific committee (comprising <a href="https://users.utu.fi/ksmato/">Kaisa Matomäki</a> and <a href="https://www.mv.helsinki.fi/home/sahlsten/">Tuomas Sahlsten</a>) will select 30 talks from all the proposed ones, and by early April we will let you know if your talk has been selected.<br>
     </p>
+    -->
     <p>
+    The contributed talks have been selected.
+    </p>
+    <p>     
         The talks will be 20 minutes long, and you should aim for at least the first half of your talk to be accessible to a broad spectrum of mathematicians in Analysis, Geometry and Number Theory.
         </p>
         
