--- a/directions/index.html
+++ b/directions/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Practical Information| Conference Template</title>
+    <title>Practical Information | AGENT 2024</title>
 </head>
 
 <body>
