--- a/program/index.html
+++ b/program/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Program | Conference Template</title>
+    <title>Program | AGENT 2024</title>
 </head>
 
 <body>
