--- a/program/index.html
+++ b/program/index.html
@@ -147,7 +147,7 @@
     <td class="time">14:20</td>
     <td class="talk"><b>Athanasios Tsantaris</b> (HY): <br> <i>Quasiconformal curves and quasiconformal mappings</i></td>
     <td class="coffee">Coffee</td>
-        <td class="talk"><b>Aleksi Pyörälä</b> (JY): <br><i>Summing a set on the parabola with itself</i></td>
+        <td class="talk"><b>Anna Doležalová</b> (JY): <br> <i>Approximating weak limits of Sobolev homeomorphisms</i></td>
     <td class="coffee">Coffee + closing</td>
 </i></td>
   </tr>
@@ -163,7 +163,6 @@
     <td class="talk"><b>Kargar Rahim</b> (UTU): <br> <i>Formulas for the visual angle metric</i></td>
     <td class="talk"><b>Petri Laarne</b> (HY): <br><i>Paradifferential calculus and dispersive PDEs </i></td>
         <td class="talk"><b>Guangzeng Yi</b> (JY): <br> <i>Large cliques in extremal incidence configurations</i></td>
-
         <td class="time"><br> </td>
   </tr>
     <tr>
@@ -175,7 +174,7 @@
   </tr>
   <tr>
     <td class="time">16:15</td>
-    <td class="talk"><b>Anna Doležalová</b> (JY): <br> <i>Approximating weak limits of Sobolev homeomorphisms</i></td>
+        <td class="talk"><b>Aleksi Pyörälä</b> (JY): <br><i>Summing a subset of the parabola with itself</i></td>
     <td class="panel" rowspan="2">Panel (16:15-17:45)</td>
         <td class="talk"><b>Yu-Liang Wu</b> (OY): <br><i>Hausdorff dimension of irreducible Markov chains indexed by d-trees</i></td>
         <td class="time"><br> </td>
