--- a/program/index.html
+++ b/program/index.html
@@ -132,7 +132,7 @@
   <tr>
     <td class="time">13:30</td>
     <td class="talk"><b>Susanna Heikkilä</b> (HY): <br><i>Quasiregular curves and cohomology</i></td>
-	<td class="talk" rowspan="2"><b>Kaisa Matomäki</b> (UTU): <br> <i>TBA</i></td>
+	<td class="talk" rowspan="2"><b>Kaisa Matomäki</b> (UTU): <br> <i>Sieve methods and primes in arithmetic progressions and short intervals</i></td>
 	<td class="talk"><b>Roope Anttila</b> (OY):<br><i>Assouad dimensions of self-affine sets</i></td>
 
 	<td class="talk" rowspan="2"><b>Miguel García Bravo</b> (Madrid): <br> <i>About the geometry of Sobolev extension domains</i></td>
