--- a/program/index.html
+++ b/program/index.html
@@ -154,7 +154,7 @@
     <tr>
     <td class="time">14:45</td>
     <td class="coffee">Coffee</td>
-    <td class="talk"><b>Mikko Jaskari (14:55)</b> (UTU): <br> <i>The zero's of the Riemann zeta function and prime numbers</i></td>
+    <td class="talk"><b>Mikko Jaskari (14:55)</b> (UTU): <br> <i>The zeros of the Riemann zeta function and prime numbers</i></td>
     <td class="coffee">Coffee</td>
     <td class="time"><br> </td>
   </tr>
