--- a/program/index.html
+++ b/program/index.html
@@ -112,7 +112,7 @@
   </tr>
   <tr>
     <td class="time">10:50</td>
-    <td class="talk" rowspan="2"><b>Michele Villa (11:15)</b> (Bilbao): <br> <i>TBA</i></td>
+    <td class="talk" rowspan="2"><b>Michele Villa (11:15)</b> (Bilbao): <br> <i>Carleson's epsilon-squared conjecture in higher dimension and Faber-Krahn inequalities</i></td>
     <td class="talk"><b>Anna-Mariya Otsetova</b> (Aalto): <br> <i>Axisymmetric capillary water waves with vorticity and swirl connecting to static unduloid configurations</i></td>
     <<td class="talk" rowspan="2"><b>Nages Shanmugalingam</b> (Cincinnati): <br> <i>TBA</i></td>
     <td class="talk"><b>Juho Halonen</b> (UEF): <br><i>Tropical Nevanlinna theory for tropical meromorphic functions of two variables</i></td>
