--- a/program/index.html
+++ b/program/index.html
@@ -63,7 +63,9 @@
     <p>
 	Each short talk is 20 minutes with 5 minutes for a transition and questions. The exception are short talks at 15:45, which are followed by a 10 minute break.
 	</p>
-
+	<p>
+	You can download the abstract booklet <a href="https://agent-forum.github.io/assets/AGENT2024Abstracts.pdf">here</a>.
+	</p>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{border-color:black;border-style:solid;border-width:2px;font-family:Arial, sans-serif;font-size:14px;
@@ -114,7 +116,7 @@
     <td class="time">10:50</td>
     <td class="talk" rowspan="2"><b>Michele Villa (11:15)</b> (Bilbao): <br> <i>Carleson's epsilon-squared conjecture in higher dimension and Faber-Krahn inequalities</i></td>
     <td class="talk"><b>Anna-Mariya Otsetova</b> (Aalto): <br> <i>Axisymmetric capillary water waves with vorticity and swirl connecting to static unduloid configurations</i></td>
-    <<td class="talk" rowspan="2"><b>Nages Shanmugalingam</b> (Cincinnati): <br> <i>TBA</i></td>
+    <<td class="talk" rowspan="2"><b>Nages Shanmugalingam</b> (Cincinnati): <br> <i>Jump set structure of metric space-valued BV functions in metric measure spaces of 1-controlled geometry</i></td>
     <td class="talk"><b>Juho Halonen</b> (UEF): <br><i>Tropical Nevanlinna theory for tropical meromorphic functions of two variables</i></td>
   </tr>
   <tr>
