--- a/directions/index.html
+++ b/directions/index.html
@@ -43,8 +43,18 @@
     </table>
     
     <h2>Venue</h2>
-    The event will take place at the Department of Mathematics and Statistics of the University of Jyväskylä, which is located in the MaA and MaD buildings of the Mattilanniemi campus. The website <a href="https://navi.jyu.fi/">navi.jyu.fi</a> can be used to navigate around the buildings. <br> 
+    <p>
+    The event will take place at the Department of Mathematics and Statistics of the University of Jyväskylä, which is located in the MaA and MaD buildings of the Mattilanniemi campus. The website <a href="https://navi.jyu.fi/">navi.jyu.fi</a> can be used to navigate around the buildings.
+    </p>
+    <p>
+	All the talks take place in room <b>MaD202</b>, which is on the second floor of the MaD building.
+	</p>
+	<p>
+	The opening coffee takes place on Tuesday 14 May from 10:30 until 11:15 in the lobby of the MaA building.
+	</p>
+	<p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1858.862149143023!2d25.731609879197265!3d62.23142190595252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4685755ccbd696bb%3A0xa2610b9c8588e68c!2sDepartment%20of%20Mathematics%20and%20Statistics!5e0!3m2!1spl!2sfi!4v1704723445811!5m2!1spl!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </p>
 
 	<h2>Accommodation</h2>
 	<p>
