--- a/program/index.html
+++ b/program/index.html
@@ -66,6 +66,12 @@
 	<p>
 	You can download the abstract booklet <a href="https://agent-forum.github.io/assets/AGENT2024Abstracts.pdf">here</a>.
 	</p>
+	<p>
+	All the talks take place in room <b>MaD202</b>, which is on the second floor of the MaD building.
+	</p>
+	<p>
+	The opening coffee takes place on Tuesday 14 May from 10:30 until 11:15 in the lobby of the MaA building.
+	</p>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{border-color:black;border-style:solid;border-width:2px;font-family:Arial, sans-serif;font-size:14px;
