--- a/program/index.html
+++ b/program/index.html
@@ -113,14 +113,14 @@
   </tr>
   <tr>
     <td class="time">10:15</td>
-    <td class="coffee">Coffee + Start (10:30-11:15)</td>
+    <td class="coffee">Coffee + Start <b><font color="red"> (10:30-11:15)</font></b></td>
     <td class="coffee">Coffee</td>
     <td class="coffee">Coffee</td>
     <td class="coffee">Coffee</td>
   </tr>
   <tr>
     <td class="time">10:50</td>
-    <td class="talk" rowspan="2"><b>Michele Villa (11:15)</b> (Bilbao): <br> <i>Carleson's epsilon-squared conjecture in higher dimension and Faber-Krahn inequalities</i></td>
+    <td class="talk" rowspan="2"><b>Michele Villa <font color="red"> (11:15)</font></b> (Bilbao): <br> <i>Carleson's epsilon-squared conjecture in higher dimension and Faber-Krahn inequalities</i></td>
     <td class="talk"><b>Anna-Mariya Otsetova</b> (Aalto): <br> <i>Axisymmetric capillary water waves with vorticity and swirl connecting to static unduloid configurations</i></td>
     <<td class="talk" rowspan="2"><b>Nages Shanmugalingam</b> (Cincinnati): <br> <i>Jump set structure of metric space-valued BV functions in metric measure spaces of 1-controlled geometry</i></td>
     <td class="talk"><b>Juho Halonen</b> (UEF): <br><i>Tropical Nevanlinna theory for tropical meromorphic functions of two variables</i></td>
@@ -132,7 +132,7 @@
   </tr>
     <tr>
     <td class="time">11:40</td>
-    <td class="coffee">Lunch (12:05)</td>
+    <td class="coffee">Lunch <b><font color="red"> (12:05)</font></b></td>
 	<td class="coffee">Lunch</td>
 	<td class="coffee">Lunch</td>
 	<td class="coffee">Lunch</td>
@@ -162,7 +162,7 @@
     <tr>
     <td class="time">14:45</td>
     <td class="coffee">Coffee</td>
-    <td class="talk"><b>Mikko Jaskari (14:55)</b> (UTU): <br> <i>The zeros of the Riemann zeta function and prime numbers</i></td>
+    <td class="talk"><b>Mikko Jaskari <font color="red"> (14:55)</font></b></b> (UTU): <br> <i>The zeros of the Riemann zeta function and prime numbers</i></td>
     <td class="coffee">Coffee</td>
     <td class="time"><br> </td>
   </tr>
