--- a/program/index.html
+++ b/program/index.html
@@ -128,7 +128,7 @@
   <tr>
     <td class="time">11:15</td>
     <td class="talk"><b>Nicolas Vanspranghe</b> (TUni): <br> <i>Frequency domain estimates for ill-posed systems and Neumann stabilization of the wave equation</i></td>
-    <td class="talk"><b>Max Goering</b> (JY): <br> <i>Quantitative equidistribution</i></td>
+    <td class="talk"><b>Max Goering</b> (JY): <br> <i>Principal values and rectifiability of measures</i></td>
   </tr>
     <tr>
     <td class="time">11:40</td>
