--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
 	<p>
 	The first edition of the conference took place in 2021 at Aalto University (<a href="http://math.aalto.fi/conferences/agent2021/">http://math.aalto.fi/conferences/agent2021/</a>). 
 	</p>
+	
+	<h2>Conference photo</h2>
+	<p>
+	Below is the conference photo taken by Tuomas Orponen. Click <a href="/assets/AGENT2024-photo.jpeg">here</a> for higher resolution.
+	</p>
+	<p>
+	<img src="assets/AGENT2024-photo.jpeg" alt="AGENT-Forum-photo" style="width:100%">
+	</p>
 
 
 	<h2>Contact</h2>
